<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"TwitFlick "</string>

    <string name="title_section1">Buzzing</string>
    <string name="title_section2">Details</string>
    <string name="title_section3">Tweets</string>

    <string name="share_like">I love %1$s. What an amazing flick! #twitflicks #movie
        http://www.twitflicks.com/movie/%2$s via @drahtwerk
    </string>
    <string name="share_hate">I hate %1$s! What a disappointing movie. #twitflicks #movie
        http://www.twitflicks.com/movie/%2$s via @drahtwerk
    </string>
    <string name="send_to">Share</string>

    <string name="tweets_today">Today %1$d</string>
    <string name="tweets_total">Total %1$d</string>

    <string name="detail_no_movie_title">No movie selected</string>
    <string name="detail_no_movie_summary">Please select a movie</string>
    <string name="text_share_like">Share Like</string>
    <string name="text_share_dislike">Share Dislike</string>
    <string name="text_pull_to_refresh">Pull to refresh</string>
    <string name="text_title">Title</string>
    <string name="text_tweet">Tweet&#8230;</string>
    <string name="content_description_user_image">User Image</string>
    <string name="content_description_movie_image">Movie poster</string>
    <string name="content_description_buzzing_actions">Buzzing actions</string>
    <string name="search_hint">Movie title</string>
    <string name="search">Search</string>

</resources>
