<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/list_selector"
    tools:context=".MainActivity$DummySectionFragment">

    <ImageButton
        android:id="@+id/buzzingPoster"
        android:layout_width="@dimen/poster_width"
        android:layout_height="@dimen/poster_height"
        android:scaleType="fitXY"
        android:layout_marginRight="10dp"
        android:background="@drawable/poster_back"
        android:padding="5dp"
        android:contentDescription="@string/content_description_movie_image"
        android:src="@android:drawable/ic_menu_gallery" />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:id="@+id/buzzing_popup_menu"
        android:layout_gravity="right"
        android:layout_centerVertical="true"
        android:src="@android:drawable/ic_menu_share"
        android:background="@drawable/button_selector"
        android:contentDescription="@string/content_description_buzzing_actions" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_toLeftOf="@id/buzzing_popup_menu"
        android:id="@+id/buzzing_tweets_info">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tweets_today"
            android:layout_gravity="right"
            android:id="@+id/buzzingToday" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tweets_total"
            android:layout_gravity="right"
            android:id="@+id/buzzingTotal" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_title"
        android:textStyle="bold"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_toRightOf="@id/buzzingPoster"
        android:id="@+id/buzzingName"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/buzzing_tweets_info" />

    <View
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:layout_alignBottom="@id/buzzingPoster"
        android:layout_alignParentRight="true"
        android:background="@color/green" />

</RelativeLayout>
